--- a/kullanim-kosullari.html
+++ b/kullanim-kosullari.html
@@ -144,7 +144,7 @@
                 <h1>Kullanım Koşulları</h1>
                 <p class="update-date">Son Güncelleme: 1 Ekim 2025</p>
 
-                <p>Bu Kullanım Koşulları ("Koşullar"), HARÇ YAZILIM ("Harç", "biz", "bize", "bizim") tarafından sunulan muhasebe yazılımı hizmetlerinin ("Hizmet") kullanımını düzenler. Hizmeti kullanarak bu koşulları kabul etmiş olursunuz.</p>
+                <p>Bu Kullanım Koşulları ("Koşullar"), HARÇ MUHASEBE ("Harç", "biz", "bize", "bizim") tarafından sunulan muhasebe yazılımı hizmetlerinin ("Hizmet") kullanımını düzenler. Hizmeti kullanarak bu koşulları kabul etmiş olursunuz.</p>
 
                 <h2>1. Hizmet Tanımı</h2>
                 <p>Harç, inşaat sektörü için özel geliştirilmiş, yapay zeka destekli bir muhasebe yazılımıdır. Hizmetimiz aşağıdaki özellikleri içerir:</p>
@@ -197,7 +197,7 @@
                 <p>Yeni kullanıcılar için ücretsiz deneme süresi sunulabilir. Deneme süresi sonunda otomatik olarak ücretli plana geçiş yapılabilir.</p>
 
                 <h2>5. Fikri Mülkiyet Hakları</h2>
-                <p>Harç yazılımı, logoları, tasarımları ve içeriği dahil olmak üzere tüm fikri mülkiyet hakları HARÇ YAZILIM'a aittir. Kullanıcılar:</p>
+                <p>Harç muhasebe yazılımı, logoları, tasarımları ve içeriği dahil olmak üzere tüm fikri mülkiyet hakları HARÇ MUHASEBE'a aittir. Kullanıcılar:</p>
                 <ul>
                     <li>Hizmeti yalnızca kendi iş amaçları için kullanabilir</li>
                     <li>Yazılımı kopyalayamaz, dağıtamaz veya değiştiremez</li>
@@ -248,7 +248,7 @@
                 </ul>
 
                 <h2>9. Değişiklikler</h2>
-                <p>HARÇ YAZILIM, bu kullanım koşullarını dilediği zaman değiştirme hakkını saklı tutar. Önemli değişiklikler email yoluyla bildirilecektir. Değişikliklerden sonra hizmeti kullanmaya devam etmeniz, yeni koşulları kabul ettiğiniz anlamına gelir.</p>
+                <p>HARÇ MUHASEBE, bu kullanım koşullarını dilediği zaman değiştirme hakkını saklı tutar. Önemli değişiklikler email yoluyla bildirilecektir. Değişikliklerden sonra hizmeti kullanmaya devam etmeniz, yeni koşulları kabul ettiğiniz anlamına gelir.</p>
 
                 <h2>10. Uygulanacak Hukuk</h2>
                 <p>Bu koşullar Türkiye Cumhuriyeti yasalarına tabidir. Herhangi bir uyuşmazlık durumunda İstanbul mahkemeleri ve icra daireleri yetkilidir.</p>
@@ -301,7 +301,7 @@
                     <a href="kullanim-kosullari.html" class="footer-link">Kullanım Koşulları</a>
                     <a href="gizlilik-politikasi.html" class="footer-link">Gizlilik Politikası</a>
                 </div>
-                <p class="copyright">© 2025 HARÇ YAZILIM. Tüm hakları saklıdır.</p>
+                <p class="copyright">© 2025 HARÇ MUHASEBE. Tüm hakları saklıdır.</p>
             </div>
         </div>
     </footer>
