--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
     <section class="hero" id="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">HARÇ MUHASEBE - Yapay Zeka Destekli İnşaat Muhasebesi</h1>
+                <h1 class="hero-title">HARÇ Yapay Zeka Destekli İnşaat Muhasebesi</h1>
                 <p class="hero-subtitle">Manuel veri girişini bitirin, hakediş ve maliyet takibini otomatikleştirin. <strong>Yapay zeka</strong> ile zaman kazanın, kârlılığınızı artırın.</p>
                 <div class="hero-buttons">
                     <a href="#contact-form" class="btn btn-primary btn-large">Hemen Başla</a>
