✨ FAQ Accordion İyileştirmeleri
✅ Yeni Özellikler:

1. **Smooth Transitions:**
   - transition: cubic-bezier(0.4, 0, 0.2, 1) (daha akıcı)
   - opacity animasyonu (fade-in effect)
   - max-height: 200px → 300px (daha uzun cevaplar için)

2. **Hover Effects:**
   - Hover: rgba(5, 150, 105, 0.02) (çok hafif yeşil)
   - Active: rgba(5, 150, 105, 0.05) (daha belirgin yeşil)
   - Icon scale(1.1) on hover

3. **Visual Enhancements:**
   - Sorular arası gradient separator (::after)
   - Active başlık rengi → yeşil
   - Icon font-size: 1.2rem (daha büyük)
   - Başlık font-weight: 600 (daha bold)

4. **Active State:**
   - Başlık yeşil olur
   - Arka plan hafif yeşil
   - Ok 180° döner (smooth rotation)

5. **Better Spacing:**
   - line-height: 1.7 (cevap metni daha okunabilir)
   - padding-top: 0.5rem (cevap için boşluk)

---

✨ Daha modern ve professional accordion
✨ Smooth animasyonlar
✨ Better hover feedback
✨ Visual separators

--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
             </div>
             <div class="nav-menu" id="nav-menu">
                 <a href="#features" class="nav-link">Özellikler</a>
-                <a href="#screenshots" class="nav-link">Neden Biz?</a>
+                <a href="#screenshots" class="nav-link">Neden Biz</a>
                     <a href="#solutions" class="nav-link">Çözümler</a>
                 <a href="#faq" class="nav-link">SSS</a>
                 <a href="#contact-form" class="nav-link contact-btn">İletişime Geçin</a>
