🎨 Form Başlığı ve Input Border'ları Güncellendi
✅ Değişiklikler:

1. Form Başlığı:
   font-size: 1.75rem → 2.5rem
   "Yeni nesil inşaat muhasebenizi Harçla birleştirin."
   Diğer section başlıklarıyla aynı boyutta.

2. Form Input/Select Border:
   border: 2px solid var(--border-color) → 2px solid #c3c3c3

   Etkilenen alanlar:
   - Ad Soyad / Unvan
   - E-posta
   - Telefon (ülke kodu + numara)
   - Şirket Adı
   - Sektör dropdown
   - Çalışan Sayısı dropdown

3. Boş CSS Rule Temizlendi:
   ❌ body { } (boş)
   ✅ Sadece comment

---

✨ Tutarlı başlık boyutu
✨ Form elementleri diğer kartlarla aynı border rengi (#c3c3c3)

--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
         <div class="container">
             <div class="form-container">
                 <div class="form-content">
-                    <h2>Yeni nesil inşaat muhasebenizi Harçla birleştirin.</h2>
+                    <h2>Yapay Zeka Destekli İnşaat Muhasebesi ile Tanışın.</h2>
                     <form class="contact-form" id="contactForm">
                         <div class="form-group">
                             <label for="name">Ad Soyad / Unvan</label>
