🎨 Form Input Border İnceltildi
✅ Değişiklik:

.form-group input,
.form-group select {
  border: 2px → 1px solid #c3c3c3
}

Tüm form alanları daha ince ve tutarlı border.

--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
         <div class="container">
             <div class="form-container">
                 <div class="form-content">
-                    <h2>Yapay Zeka Destekli İnşaat Muhasebesi ile Tanışın.</h2>
+                    <h2>Dönüşümünüze HARÇ'la Başlayın!</h2>
                     <form class="contact-form" id="contactForm">
                         <div class="form-group">
                             <label for="name">Ad Soyad / Unvan</label>
