--- a/index.html
+++ b/index.html
@@ -685,8 +685,7 @@
             </div>
             <div class="hero-image">
                 <picture>
-                    <source media="(max-width: 768px)" srcset="assets/images/dashboard-mockup-mobile.webp" type="image/webp">
-                    <source srcset="assets/images/dashboard-mockup-desktop.webp" type="image/webp">
+                    <source srcset="assets/images/dashboard-mockup.png" type="image/webp">
                     <img src="assets/images/dashboard-mockup.png" alt="Harç İnşaat Muhasebe Yazılımı - Ana Dashboard Ekranı - OCR Fatura Okuma ve Hakediş Takibi" class="hero-mockup" width="800" height="600" loading="eager">
                 </picture>
             </div>
@@ -845,9 +844,9 @@
             <div class="screenshots-grid">
                 <div class="screenshot-card">
                     <picture>
-                        <source media="(max-width: 768px)" srcset="assets/images/dashboard-screenshot-mobile.webp" type="image/webp">
-                        <source srcset="assets/images/dashboard-screenshot.webp" type="image/webp">
-                        <img src="assets/images/dashboard-screenshot.png" alt="Harç Ana Panel Dashboard - İnşaat Projeleri Genel Bakış ve KPI Takibi" class="screenshot-img" width="400" height="300" loading="lazy">
+                        <source media="(max-width: 768px)" srcset="assets/images/dashboard-screenshot-mobile.png" type="image/png">
+                        <source srcset="assets/images/dashboard-screenshot-mobile.png" type="image/png">
+                        <img src="assets/images/dashboard-screenshot-mobile.png" alt="Harç Ana Panel Dashboard - İnşaat Projeleri Genel Bakış ve KPI Takibi" class="screenshot-img" width="400" height="300" loading="lazy">
                     </picture>
                     <h3>Ana Panel</h3>
                     <p>Genel bakış ve KPI'lar</p>
