--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://harcmuhasebe.com.tr/">
-    <meta property="og:site_name" content="Harç - İnşaat Muhasebe Yazılımı">
+    <meta property="og:site_name" content="Harç Muhasebe">
     <meta property="og:title" content="HARÇ MUHASEBE - Yapay Zeka Destekli İnşaat Muhasebe Yazılımı">
     <meta property="og:description" content="HARÇ MUHASEBE: Yapay zeka destekli inşaat muhasebesi - OCR fatura okuma, hakediş takibi, AI raporlama, 7/24 chatbot.">
     <meta property="og:image" content="https://harcmuhasebe.com.tr/assets/images/dashboard-mockup.png">
@@ -55,8 +55,6 @@
     
     <!-- Optimized favicon for Google Search Results -->
     <link rel="icon" href="https://harcmuhasebe.com.tr/assets/images/favicon.png" type="image/png" sizes="48x48">
-    <link rel="icon" href="https://harcmuhasebe.com.tr/assets/images/favicon.png" type="image/png" sizes="32x32">
-    <link rel="icon" href="https://harcmuhasebe.com.tr/assets/images/favicon.png" type="image/png" sizes="16x16">
     <link rel="shortcut icon" href="https://harcmuhasebe.com.tr/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="https://harcmuhasebe.com.tr/assets/images/apple-touch-icon.png">
     <link rel="manifest" href="https://harcmuhasebe.com.tr/site.webmanifest">
@@ -136,7 +134,7 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "name": "Harç",
+      "name": "Harç Muhasebe",
       "alternateName": "HARÇ MUHASEBE",
       "url": "https://harcmuhasebe.com.tr/",
       "description": "İnşaat sektörü için özel geliştirilmiş, yapay zeka destekli muhasebe yazılımı. OCR ile fatura okuma, akıllı raporlama ve mobil uyumluluk.",
